@@ -533,6 +533,7 @@
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-control-center">
     <branch id="HEAD" stringfrozen="true"/>
@@ -1194,7 +1195,7 @@
   </module>
   <module id="seahorse">
     <branch id="HEAD"/>
-    <branch id="seahorse-0-8"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="silky">
     <branch id="HEAD"/>
