@@ -375,7 +375,7 @@
       <module id="gnome-media"/>
       <module id="gnome-menus"/>
       <module id="gnome-netstatus"/>
-      <module id="gnome-nettool"/>
+      <module id="gnome-nettool" branch="gnome-2-18"/>
       <module id="gnome-panel"/>
       <module id="gnome-power-manager" branch="gnome-2-18"/>
       <module id="gnome-screensaver"/>
@@ -401,7 +401,7 @@
       <module id="nautilus-cd-burner"/>
       <module id="network-manager-applet" branch="network-manager-applet-0-6"/>
       <module id="orca" branch="gnome-2-18"/>
-      <module id="seahorse"/>
+      <module id="seahorse" branch="gnome-2-18"/>
       <module id="sound-juicer"/>
       <module id="tomboy" branch="gnome-2-18"/>
       <module id="totem"/>
