@@ -1,3 +1,8 @@
+2007-03-13  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched seahorse and gnome-nettool for 2.18.
+
 2007-03-13  Abel Cheung  <abelcheung@gmail.com>
 
 	* translation-teams.xml.in:
